--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 boto3==1.17.23
-s3transfer==0.3.4
+s3transfer==0.2.0
 botocore==1.20.23
 futures==3.2.0
-docutils
-jmespath==0.10.0
+docutils==0.16
+jmespath==0.9.3
