--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+beautifulsoup4==4.9.1
 boto3==1.17.23
-s3transfer==0.2.0
 botocore==1.20.23
-futures==3.2.0
 docutils==0.16
+futures==3.2.0
 jmespath==0.9.3
+requests==2.25.0
+s3transfer==0.2.0
